--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bitcore-p2p",
+  "name": "bcore-p2p",
   "version": "5.0.0-beta.2",
-  "description": "Interface to the bitcoin P2P network for bitcore",
+  "description": "Interface to the bitcoin core P2P network for bitcore",
   "main": "index.js",
   "scripts": {
     "lint": "gulp lint",
@@ -10,22 +10,22 @@
     "build": "gulp"
   },
   "keywords": [
-    "bitcoin",
-    "bitcore"
+    "bitcoin core",
+    "bcore"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitpay/bitcore-p2p.git"
+    "url": "https://github.com/bitcoin-cored/bitcore-p2p.git"
   },
   "dependencies": {
-    "bitcore-lib": "5.0.0-beta.1",
+    "bcore-lib": "git+https://github.com/bitcoin-cored/bitcore-lib",
     "bcoin": "1.0.0-beta.12",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
     "socks5-client": "^0.3.6"
   },
   "devDependencies": {
-    "bitcore-build": "git://github.com/bitpay/bitcore-build.git",
+    "bcore-build": "git://github.com/bitcoin-cored/bitcore-build.git",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10",
